--- a/store.html
+++ b/store.html
@@ -651,45 +651,51 @@ html, body {
 
     
 
-  <div class="product-wrap">
-    <div class="product-card">
-      <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 6">
-      </div>
-    </div>
-    <div class="product-actions">
-      <div class="product-price">$</div>
-      <button class="btn-save">SAVE</button>
-      <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+ <!-- PRODUCT 3: STREETWEAR WOMEN PRODUCT 6 (Add your real handle here) -->
+<div class="product-wrap" data-handle="product-six-handle">
+  <div class="product-card">
+    <div class="placeholder-img">
+      <!-- Update this SRC to your actual image path -->
+      <img src="ModelPictures/your-image-folder/image-name.png" alt="Streetwear Women Product 6">
     </div>
   </div>
-
-  <div class="product-wrap">
-    <div class="product-card">
-      <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 7">
-      </div>
-    </div>
-    <div class="product-actions">
-      <div class="product-price">$</div>
-      <button class="btn-save">SAVE</button>
-      <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
-    </div>
+  <div class="product-actions">
+    <div class="product-price">$</div>
+    <button class="btn-save">SAVE</button>
+    <!-- data-variant attribute is no longer needed here -->
+    <button class="btn-select">SELECT</button>
+    <a class="btn-checkout" href="#">CHECKOUT</a>
   </div>
-
 </div>
+
+<!-- PRODUCT 4: STREETWEAR WOMEN PRODUCT 7 (Add your real handle here) -->
+<div class="product-wrap" data-handle="product-seven-handle">
+  <div class="product-card">
+    <div class="placeholder-img">
+       <!-- Update this SRC to your actual image path -->
+      <img src="ModelPictures/your-image-folder/image-name-2.png" alt="Streetwear Women Product 7">
+    </div>
+  </div>
+  <div class="product-actions">
+    <div class="product-price">$</div>
+    <button class="btn-save">SAVE</button>
+     <!-- data-variant attribute is no longer needed here -->
+    <button class="btn-select">SELECT</button>
+    <a class="btn-checkout" href="#">CHECKOUT</a>
+  </div>
+</div>
+
 
   <!-- PATCH BABY JOGGER — MEN -->
- <h2 class="drop-title">PATCH BABY JOGGER — MEN</h2>
+<h2 class="drop-title">PATCH BABY JOGGER — MEN</h2>
 
 <div class="horizontal-scroll">
 
-  <div class="product-wrap">
+  <!-- PRODUCT 1 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-1-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 1">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 1">
       </div>
     </div>
     <div class="product-actions">
@@ -700,10 +706,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 2 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-2-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 2">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 2">
       </div>
     </div>
     <div class="product-actions">
@@ -714,10 +721,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 3 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-3-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 3">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 3">
       </div>
     </div>
     <div class="product-actions">
@@ -728,10 +736,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 4 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-4-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 4">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 4">
       </div>
     </div>
     <div class="product-actions">
@@ -742,10 +751,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 5 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-5-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 5">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 5">
       </div>
     </div>
     <div class="product-actions">
@@ -756,10 +766,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 6 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-6-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 6">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 6">
       </div>
     </div>
     <div class="product-actions">
@@ -770,10 +781,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 7 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-7-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 7">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 7">
       </div>
     </div>
     <div class="product-actions">
@@ -785,21 +797,23 @@ html, body {
   </div>
 
 </div>
+
 
   <!-- ================= MID BANNER ================= -->
-  <div class="drop-banner">
+ <div class="drop-banner">
     <div class="banner-placeholder">PATCH BABY — STREETWEAR DROP</div>
-  </div>
+</div>
 
-  <!-- PATCH BABY STREETWEAR — WOMEN -->
-  <h2 class="drop-title">PATCH BABY STREETWEAR — WOMEN</h2>
+<!-- PATCH BABY STREETWEAR — WOMEN -->
+<h2 class="drop-title">PATCH BABY STREETWEAR — WOMEN</h2>
 
 <div class="horizontal-scroll">
 
-  <div class="product-wrap">
+  <!-- PRODUCT 1 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="women-product-1-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 1">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Women Product 1">
       </div>
     </div>
     <div class="product-actions">
@@ -810,10 +824,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 2 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="women-product-2-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 2">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Women Product 2">
       </div>
     </div>
     <div class="product-actions">
@@ -824,10 +839,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 3 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="women-product-3-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 3">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Women Product 3">
       </div>
     </div>
     <div class="product-actions">
@@ -838,10 +854,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 4 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="women-product-4-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 4">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Women Product 4">
       </div>
     </div>
     <div class="product-actions">
@@ -852,10 +869,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 5 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="women-product-5-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 5">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Women Product 5">
       </div>
     </div>
     <div class="product-actions">
@@ -866,10 +884,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 6 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="women-product-6-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 6">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Women Product 6">
       </div>
     </div>
     <div class="product-actions">
@@ -880,10 +899,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 7 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="women-product-7-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Women Product 7">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Women Product 7">
       </div>
     </div>
     <div class="product-actions">
@@ -896,15 +916,17 @@ html, body {
 
 </div>
 
+
   <!-- PATCH BABY STREETWEAR — MEN -->
- <h2 class="drop-title">PATCH BABY STREETWEAR — MEN</h2>
+<h2 class="drop-title">PATCH BABY STREETWEAR — MEN</h2>
 
 <div class="horizontal-scroll">
 
-  <div class="product-wrap">
+  <!-- PRODUCT 1 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-1-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 1">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 1">
       </div>
     </div>
     <div class="product-actions">
@@ -915,10 +937,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 2 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-2-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 2">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 2">
       </div>
     </div>
     <div class="product-actions">
@@ -929,10 +952,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 3 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-3-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 3">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 3">
       </div>
     </div>
     <div class="product-actions">
@@ -943,10 +967,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 4 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-4-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 4">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 4">
       </div>
     </div>
     <div class="product-actions">
@@ -957,10 +982,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 5 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-5-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 5">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 5">
       </div>
     </div>
     <div class="product-actions">
@@ -971,10 +997,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 6 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-6-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 6">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 6">
       </div>
     </div>
     <div class="product-actions">
@@ -985,10 +1012,11 @@ html, body {
     </div>
   </div>
 
-  <div class="product-wrap">
+  <!-- PRODUCT 7 (Add your actual handle and image source) -->
+  <div class="product-wrap" data-handle="men-product-7-handle">
     <div class="product-card">
       <div class="placeholder-img">
-        <img src="PLACEHOLDER.png" alt="Streetwear Men Product 7">
+        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 7">
       </div>
     </div>
     <div class="product-actions">
