--- a/store.html
+++ b/store.html
@@ -591,17 +591,19 @@ html, body {
   <div class="product-actions">
     <div class="product-price">$</div>
 
-    <button class="btn-save">SAVE</button>
+    <button type="button" class="btn-save">SAVE</button>
 
-    <!-- HARD-LOCKED VARIANT GID -->
-    <button class="btn-select"
+    <button
+      type="button"
+      class="btn-select"
       data-variant="gid://shopify/ProductVariant/52764320760126">
       SELECT
     </button>
 
-    <button class="btn-checkout">CHECKOUT</button>
+    <button type="button" class="btn-checkout">CHECKOUT</button>
   </div>
 </div>
+
 
 
 
@@ -616,21 +618,19 @@ html, body {
   <div class="product-actions">
     <div class="product-price">$</div>
 
-    <!-- SIZE POPUP -->
     <div class="size-popup" style="display:none;">
-      <button data-variant="gid://shopify/ProductVariant/52764324561214">S</button>
-      <button data-variant="gid://shopify/ProductVariant/52764324593982">M</button>
-      <button data-variant="gid://shopify/ProductVariant/52764324626750">L</button>
-      <button data-variant="gid://shopify/ProductVariant/52764324659518">XL</button>
-      <button data-variant="gid://shopify/ProductVariant/52764431810878">XXL</button>
+      <button type="button" data-variant="gid://shopify/ProductVariant/52764324561214">S</button>
+      <button type="button" data-variant="gid://shopify/ProductVariant/52764324593982">M</button>
+      <button type="button" data-variant="gid://shopify/ProductVariant/52764324626750">L</button>
+      <button type="button" data-variant="gid://shopify/ProductVariant/52764324659518">XL</button>
+      <button type="button" data-variant="gid://shopify/ProductVariant/52764431810878">XXL</button>
     </div>
 
-    <button class="btn-save">SAVE</button>
+    <button type="button" class="btn-save">SAVE</button>
 
-    <!-- SELECT JUST OPENS SIZE -->
-    <button class="btn-select">SELECT</button>
+    <button type="button" class="btn-select">SELECT</button>
 
-    <button class="btn-checkout">CHECKOUT</button>
+    <button type="button" class="btn-checkout">CHECKOUT</button>
   </div>
 </div>
 
@@ -653,7 +653,7 @@ html, body {
     <button class="btn-save">SAVE</button>
     <!-- data-variant attribute is no longer needed here -->
     <button class="btn-select">SELECT</button>
-    <a class="btn-checkout" href="#">CHECKOUT</a>
+    <button type="button" class="btn-checkout">CHECKOUT</button>
   </div>
 </div>
 
@@ -670,7 +670,7 @@ html, body {
     <button class="btn-save">SAVE</button>
      <!-- data-variant attribute is no longer needed here -->
     <button class="btn-select">SELECT</button>
-    <a class="btn-checkout" href="#">CHECKOUT</a>
+    <button type="button" class="btn-checkout">CHECKOUT</button>
   </div>
 </div>
 
@@ -691,7 +691,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -706,7 +706,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -721,7 +721,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -736,7 +736,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -751,7 +751,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -766,7 +766,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -781,7 +781,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -809,7 +809,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -824,7 +824,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -839,7 +839,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -854,7 +854,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -869,7 +869,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -884,7 +884,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -899,7 +899,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -922,7 +922,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -937,7 +937,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -952,7 +952,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+     <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -967,7 +967,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -982,7 +982,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -997,7 +997,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -1012,7 +1012,7 @@ html, body {
       <div class="product-price">$</div>
       <button class="btn-save">SAVE</button>
       <button class="btn-select">SELECT</button>
-      <a class="btn-checkout" href="#">CHECKOUT</a>
+      <button type="button" class="btn-checkout">CHECKOUT</button>
     </div>
   </div>
 
@@ -1520,6 +1520,8 @@ html, body {
 
 <!-- Use the modern Storefront API client library -->
 <script>
+ console.log("EPÒK HEADLESS SCRIPT LOADED");
+   
 const SHOP_DOMAIN = "epok-8204.myshopify.com";
 const TOKEN = "7cce3413000760b0b43d63e98525bf9c";
 
@@ -1613,42 +1615,58 @@ async function goToCheckout() {
   window.location.href = data.data.cart.checkoutUrl;
 }
 
-/* EVENTS */
-document.addEventListener("click", e => {
 
-  // SELECT (single variant)
+
+    
+function showToast(message) {
+  const toast = document.getElementById("cart-toast");
+  if (!toast) return;
+
+  toast.textContent = message;
+  toast.style.display = "block";
+
+  setTimeout(() => {
+    toast.style.display = "none";
+  }, 1800);
+}
+
+
+
+document.addEventListener("click", (e) => {
+
+  // SINGLE VARIANT (BEANIE)
   if (e.target.classList.contains("btn-select") && e.target.dataset.variant) {
     addToCart(e.target.dataset.variant);
+    return;
   }
 
-  // OPEN SIZE POPUP
+  // OPEN SIZE POPUP (SWEATSHIRT)
   if (e.target.classList.contains("btn-select")) {
-    const popup = e.target.closest(".product-actions")?.querySelector(".size-popup");
+    const popup = e.target
+      .closest(".product-actions")
+      ?.querySelector(".size-popup");
     if (popup) popup.style.display = "flex";
+    return;
   }
 
   // SIZE CLICK
   if (e.target.matches(".size-popup button")) {
     addToCart(e.target.dataset.variant);
     e.target.closest(".size-popup").style.display = "none";
+    return;
   }
 
   // CHECKOUT
   if (e.target.classList.contains("btn-checkout")) {
     goToCheckout();
   }
+
 });
 
-/* TOAST */
-function showToast(msg) {
-  let toast = document.getElementById("cart-toast");
-  if (!toast) return;
-  toast.textContent = msg;
-  toast.style.display = "block";
-  setTimeout(() => toast.style.display = "none", 1800);
-}
+    
 </script>
 
+<div id="cart-toast"></div>
 
 
 
