--- a/store.html
+++ b/store.html
@@ -673,7 +673,8 @@ html, body {
     <button type="button" class="btn-checkout">CHECKOUT</button>
   </div>
 </div>
-
+    
+<section class="store-section" id="pv-winter-drop">
 
   <!-- PATCH BABY JOGGER — MEN -->
 <h2 class="drop-title">PATCH BABY JOGGER — MEN</h2>
@@ -1029,10 +1030,12 @@ html, body {
 
   <!-- HERO / INTRO PLACEHOLDER -->
   <div class="section-banner">
-    PANTHERS & VAMPIRES — WINTER DROP
-    <small>Replace with campaign imagery</small>
-  </div>
 
+ <div class="editorial">
+    <div class="editorial-img">PANTHERS & VAMPIRES — EDITORIAL IMAGE PLACEHOLDER</div>
+    <div class="editorial-caption">EDITORIAL COPY PLACEHOLDER</div>
+  </div>
+    
   <!-- P&V JOGGER — WOMEN -->
   <div class="grid-label">PANTHERS & VAMPIRES JOGGER — WOMEN</div>
   <div class="product-grid">
