--- a/store.html
+++ b/store.html
@@ -673,8 +673,7 @@ html, body {
     <button type="button" class="btn-checkout">CHECKOUT</button>
   </div>
 </div>
-    
-<section class="store-section" id="pv-winter-drop">
+
 
   <!-- PATCH BABY JOGGER — MEN -->
 <h2 class="drop-title">PATCH BABY JOGGER — MEN</h2>
@@ -1030,12 +1029,10 @@ html, body {
 
   <!-- HERO / INTRO PLACEHOLDER -->
   <div class="section-banner">
-
- <div class="editorial">
-    <div class="editorial-img">PANTHERS & VAMPIRES — EDITORIAL IMAGE PLACEHOLDER</div>
-    <div class="editorial-caption">EDITORIAL COPY PLACEHOLDER</div>
+    PANTHERS & VAMPIRES — WINTER DROP
+    <small>Replace with campaign imagery</small>
   </div>
-    
+
   <!-- P&V JOGGER — WOMEN -->
   <div class="grid-label">PANTHERS & VAMPIRES JOGGER — WOMEN</div>
   <div class="product-grid">
