--- a/store.html
+++ b/store.html
@@ -633,9 +633,10 @@ html, body {
     <button type="button" class="btn-checkout">CHECKOUT</button>
   </div>
 </div>
-
-
-
+</div>
+ 
+    <!-- PATCH BABYS JOGGER — MEN -->
+<h2 class="drop-title">PATCH BABY STREETWEAR — MEN</h2>
 <div class="horizontal-scroll">
 
     
