--- a/store.html
+++ b/store.html
@@ -674,7 +674,7 @@ html, body {
     <button type="button" class="btn-checkout">CHECKOUT</button>
   </div>
 </div>
-
+</div>
 
   <!-- PATCH BABY JOGGER — MEN -->
 <h2 class="drop-title">PATCH BABY JOGGER — MEN</h2>
