--- a/store.html
+++ b/store.html
@@ -569,6 +569,8 @@ html, body {
       <img src="images/babygirl.png" alt="                          ">
   <div class="product-actions">
   </div>
+  </div>
+  </div>     
 </div>
 
 
