--- a/store.html
+++ b/store.html
@@ -560,13 +560,14 @@ html, body {
 
 <div class="horizontal-scroll">
 
-    
 
+    
+             <!-- PATCH BABY -->
         <div class="product-wrap">
 
         <div class="product-card">
         <div class="placeholder-img">
-             <img src="images/babygirl.png" alt="                          ">
+             <img src="images/babygirl.png" alt=" ">
     <div class="product-actions">
     </div>
     </div>
@@ -632,20 +633,15 @@ html, body {
 
 
  <!-- PRODUCT 3: STREETWEAR WOMEN PRODUCT 6 (Add your real handle here) -->
-<div class="product-wrap" data-handle="product-six-handle">
-  <div class="product-card">
-    <div class="placeholder-img">
-      <!-- Update this SRC to your actual image path -->
-      <img src="ModelPictures/your-image-folder/image-name.png" alt="Streetwear Women Product 6">
+ <div class="product-wrap">
+
+        <div class="product-card">
+        <div class="placeholder-img">
+             <img src="images/babygirl.png" alt="                          ">
+    <div class="product-actions">
     </div>
-  </div>
-  <div class="product-actions">
-    <div class="product-price">$</div>
-    <button class="btn-save">SAVE</button>
-    <!-- data-variant attribute is no longer needed here -->
-    <button class="btn-select">SELECT</button>
-    <button type="button" class="btn-checkout">CHECKOUT</button>
-  </div>
+    </div>
+    </div>     
 </div>
 
 <!-- PRODUCT 4: STREETWEAR WOMEN PRODUCT 7 (Add your real handle here) -->
