--- a/store.html
+++ b/store.html
@@ -604,7 +604,7 @@ html, body {
 
 
 
-<!-- PRODUCT 2: SWEATSHIRT (Added data-handle) -->
+<!-- SWEATSHIRT  -->
             <div class="product-wrap">
             <div class="product-card">
             <div class="placeholder-img">
@@ -632,17 +632,70 @@ html, body {
                   </div>
 
 
- <!-- PRODUCT 3: STREETWEAR WOMEN PRODUCT 6 (Add your real handle here) -->
- <div class="product-wrap">
+ <!-- PATCH BABY -->
+        <div class="product-wrap">
 
         <div class="product-card">
         <div class="placeholder-img">
-             <img src="images/babygirl.png" alt="                          ">
+             <img src="ModelPictures/patchbabysjogger/sweatshirtside.png" alt=" ">
     <div class="product-actions">
     </div>
     </div>
     </div>     
 </div>
+
+ <!-- PATCH BABY -->
+        <div class="product-wrap">
+
+        <div class="product-card">
+        <div class="placeholder-img">
+             <img src="ModelPictures/patchbabysjogger/sweatshirtback.png" alt=" ">
+    <div class="product-actions">
+    </div>
+    </div>
+    </div>     
+</div>
+
+                <!-- Joggers -->
+            <div class="product-wrap">
+            <div class="product-card">
+            <div class="placeholder-img">
+                  <img src="ModelPictures/patchbabysjogger/joggerpantsfront.png" alt="Sweatshirt">
+            </div>
+            </div>
+
+            <div class="product-actions">
+            <div class="product-price">$</div>
+
+            <div class="size-popup" style="display:none;">
+                  <button type="button" data-variant="gid://shopify/ProductVariant/52764324561214">S</button>
+                  <button type="button" data-variant="gid://shopify/ProductVariant/52764431712574">M</button>
+                  <button type="button" data-variant="gid://shopify/ProductVariant/52764431745342">L</button>
+                  <button type="button" data-variant="gid://shopify/ProductVariant/52764431778110">XL</button>
+                  <button type="button" data-variant="gid://shopify/ProductVariant/52764431810878">XXL</button>
+                          </div>
+
+                  <button type="button" class="btn-save">SAVE</button>
+
+                  <button type="button" class="btn-select">SELECT</button>
+
+                  <button type="button" class="btn-checkout">CHECKOUT</button>
+                  </div>
+                  </div>
+
+     <!-- PATCH BABY -->
+        <div class="product-wrap">
+
+        <div class="product-card">
+        <div class="placeholder-img">
+             <img src="ModelPictures/patchbabysjogger/joggerpantsback.png" alt=" ">
+    <div class="product-actions">
+    </div>
+    </div>
+    </div>     
+</div>
+
+    
 
 <!-- PRODUCT 4: STREETWEAR WOMEN PRODUCT 7 (Add your real handle here) -->
 <div class="product-wrap" data-handle="product-seven-handle">
