--- a/store.html
+++ b/store.html
@@ -698,8 +698,8 @@ html, body {
     </div>
     </div>
     </div>     
+    </div>
 </div>
-
 
   <!-- PATCH BABY JOGGER — MEN -->
   <h2 class="drop-title">PATCH BABY JOGGER — WOMEN</h2>
