--- a/store.html
+++ b/store.html
@@ -587,6 +587,7 @@ html, body {
         <div class="product-card">
         <div class="placeholder-img">
              <img src="images/babygirl.png" alt=" ">
+             <div class="view-label">WOMANS PB JOGGER SUIT</div>
     <div class="product-actions">
     </div>
     </div>
@@ -736,6 +737,7 @@ html, body {
         <div class="product-card">
         <div class="placeholder-img">
              <img src="images/babyboy1.png" alt=" ">
+             <div class="view-label">MENS PB JOGGER SUIT</div>
     <div class="product-actions">
     </div>
     </div>
@@ -787,7 +789,7 @@ html, body {
                   <button type="button" data-variant="gid://shopify/ProductVariant/52764439118142">XL</button>
                   <button type="button" data-variant="gid://shopify/ProductVariant/52764439150910">XXL</button>
                           </div>
-
+                  <div class="view-label">FRONT VIEW</div>
                   <button type="button" class="btn-save">SAVE</button>
 
                   <button type="button" class="btn-select">SELECT</button>
@@ -796,8 +798,6 @@ html, body {
                   </div>
                   </div>
 
-
- Place holder
 
    <div class="product-wrap">
 
@@ -812,13 +812,12 @@ html, body {
 </div>
 
 
- Place holder
-
    <div class="product-wrap">
 
         <div class="product-card">
         <div class="placeholder-img">
              <img src="ModelPictures/patchbabysjogger/boysweatshirtback.png" alt=" ">
+             <div class="view-label">BACK VIEW</div>
     <div class="product-actions">
     </div>
     </div>
@@ -845,7 +844,7 @@ html, body {
                   <button type="button" data-variant="gid://shopify/ProductVariant/52764440002878">XL</button>
                   <button type="button" data-variant="gid://shopify/ProductVariant/52764440035646">XXL</button>
                           </div>
-
+                  <div class="view-label">FRONT VIEW</div>
                   <button type="button" class="btn-save">SAVE</button>
 
                   <button type="button" class="btn-select">SELECT</button>
@@ -854,22 +853,18 @@ html, body {
                   </div>
                   </div>
 
-  <!-- PRODUCT 7 (Add your actual handle and image source) -->
-  <div class="product-wrap" data-handle="men-product-7-handle">
-    <div class="product-card">
-      <div class="placeholder-img">
-        <img src="ModelPictures/your-path/image.png" alt="Streetwear Men Product 7">
-      </div>
-    </div>
-    <div class="product-actions">
-      <div class="product-price">$</div>
-      <button class="btn-save">SAVE</button>
-      <button class="btn-select">SELECT</button>
-      <button type="button" class="btn-checkout">CHECKOUT</button>
-    </div>
-  </div>
+   <div class="product-wrap">
 
+        <div class="product-card">
+        <div class="placeholder-img">
+             <img src="ModelPictures/patchbabysjogger/boyssweatpantsback.png" alt=" ">
+             <div class="view-label">BACK VIEW</div>
+    <div class="product-actions">
+    </div>
+    </div>
+    </div>     
 </div>
+
 
 
   <!-- ================= MID BANNER ================= -->
