--- a/store.html
+++ b/store.html
@@ -822,9 +822,12 @@ html, body {
     </div>
     </div>
     </div>     
+    </div>
 </div>
 
 
+
+    
   <!-- Joggers -->
             <div class="product-wrap">
             <div class="product-card">
