--- a/store.html
+++ b/store.html
@@ -821,10 +821,8 @@ html, body {
     <div class="product-actions">
     </div>
     </div>
-    </div>     
-    </div>
+    </div> 
 </div>
-
 
 
     
@@ -832,7 +830,7 @@ html, body {
             <div class="product-wrap">
             <div class="product-card">
             <div class="placeholder-img">
-                  <img src="ModelPictures/patchbabysjogger/boyssweatpantsfront.png" alt="Sweatshirt">
+                  <img src="ModelPictures/patchbabysjogger/boyssweatpantsfront.png" alt="">
             </div>
             </div>
 
@@ -865,7 +863,8 @@ html, body {
     <div class="product-actions">
     </div>
     </div>
-    </div>     
+    </div>
+    </div>
 </div>
 
 
