--- a/store.html
+++ b/store.html
@@ -73,17 +73,17 @@ html, body {
     color:#f3d688;
 }
 
-/* ============ DOUBLE ROYAL FRAME (FULL PAGE) ============ */
+/* ============ DOUBLE ROYAL FRAME (LOCKED) ============ */
 .page-frame-outer {
-    min-height:100vh;
+    position:fixed;
+    inset:0;
     padding:22px;
-    background:#000;
     border:2px solid rgba(212,175,55,0.65);
-    position:relative;
+    pointer-events:none;
+    z-index:50;
     overflow:hidden;
 }
 
-/* LEFT & RIGHT VERTICAL INSCRIPTION */
 .page-frame-outer::before,
 .page-frame-outer::after {
     content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
@@ -96,9 +96,7 @@ html, body {
     font-size:0.65rem;
     letter-spacing:0.35em;
     color:#ffffff;
-    pointer-events:none;
     white-space:nowrap;
-    overflow:hidden;
 }
 
 .page-frame-outer::before {
@@ -106,14 +104,14 @@ html, body {
     animation:leftScroll 45s linear infinite;
 }
 
+.page-frame-outer::after {
+    right:9px;
+    animation:rightScroll 45s linear infinite;
+}
+
 @keyframes leftScroll {
     from { transform:translateY(100%); }
     to   { transform:translateY(-100%); }
-}
-
-.page-frame-outer::after {
-    right:13px;
-    animation:rightScroll 45s linear infinite;
 }
 
 @keyframes rightScroll {
@@ -121,22 +119,20 @@ html, body {
     to   { transform:translateY(100%); }
 }
 
-/* BOTTOM ARABIC INSCRIPTION */
-.page-frame-outer .arabic-border {
+.arabic-border {
     position:absolute;
     bottom:6px;
     left:0;
     right:0;
-    text-align:center;
     font-size:0.7rem;
     letter-spacing:0.45em;
     color:#ffffff;
-    pointer-events:none;
     white-space:nowrap;
     overflow:hidden;
+    text-align:center;
 }
 
-.page-frame-outer .arabic-border span {
+.arabic-border span {
     display:inline-block;
     padding-left:100%;
     animation:arabic-scroll 18s linear infinite;
