--- a/store.html
+++ b/store.html
@@ -100,12 +100,12 @@ html, body {
 }
 
 .page-frame-outer::before {
-    left:0px;
+    left:0=-2px;
     animation:leftScroll 45s linear infinite;
 }
 
 .page-frame-outer::after {
-    right:13px;
+    right:21px;
     animation:rightScroll 45s linear infinite;
 }
 
