--- a/store.html
+++ b/store.html
@@ -100,7 +100,7 @@ html, body {
 }
 
 .page-frame-outer::before {
-    left:0=-2px;
+    left:-1px;
     animation:leftScroll 45s linear infinite;
 }
 
